--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,43 +1,86 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+
+[project]
 name = "ewi-usb-config-cli"
-version = "0.1.0"
-description = "Configure an Akai EWI USB MIDI wind controller via MIDI from the command line"
-license = "MIT"
-authors = ["Christopher Arndt <info@chrisarndt.de>"]
+dynamic = ["version"]
+description = 'Configure an Akai EWI USB MIDI wind controller via MIDI from the command line'
 readme = "README.md"
-homepage = "https://github.com/SpotlightKid/ewi-usb-config-cli"
-repository = "https://github.com/SpotlightKid/ewi-usb-config-cli"
-keywords = ["akai", "ewi", "ewi usb", "wind controller", "midi", "sysex"]
-packages = [
-    { include = "ewi_usb_config" },
+requires-python = ">=3.10"
+authors = [
+    { name = "Christopher Arndt", email = "chris@chrisarndt.de" },
+]
+license = "MIT"
+keywords = [
+    "akai",
+    "ewi",
+    "ewi usb",
+    "wind controller",
+    "midi",
+    "sysex"
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: Implementation :: CPython",
+]
+dependencies = [
+    "python-rtmidi~=1.5.8",
 ]
 
-[tool.poetry.urls]
-"Bug Tracker" = "https://github.com/SpotlightKid/ewi-usb-config-cli/issues"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-python-rtmidi = "^1.5.8"
+[project.urls]
+Homepage = "https://github.com/SpotlightKid/ewi-usb-config-cli"
+Source = "https://github.com/SpotlightKid/ewi-usb-config-cli"
+Issues = "https://github.com/SpotlightKid/ewi-usb-config-cli/issues"
 
-[tool.poetry.group.dev.dependencies]
-black = "22.6.0"
-isort = "5.10.1"
-flakeheaven = "3.0.0"
 
-[tool.poetry.scripts]
+[project.scripts]
 ewi-usb-config = "ewi_usb_config.cli:main"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+
+[tool.hatch.version]
+path = "ewi_usb_config/version.py"
+pattern = "version = \"(?P<version>.*?)\""
+
+
+[tool.hatch.build.targets.wheel]
+packages = ["ewi_usb_config"]
+
+
+[tool.hatch.build.targets.sdist]
+exclude = [
+  ".github",
+]
+
+
+[tool.hatch.envs.dev]
+dependencies = [
+    "black~=22.6.0",
+    "isort~=5.10.1",
+    "flakeheaven~=3.0.0",
+]
+
+
+[tool.hatch.envs.dev.scripts]
+black = "black"
+flake = "flakeheaven"
+
 
 [tool.isort]
 profile = "black"
+
 
 [tool.flakeheaven]
 format = "grouped"
 max_line_length = 88
 show_source = true
+
 
 [tool.flakeheaven.plugins]
 pycodestyle = ["+*"]
