--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: |
-            3.10
-            3.11
-            3.12
+          python-version: '3.11'
 
       - name: Set up pip cache
         if: runner.os == 'Linux'
