qa: minor hatch env scripts tweak
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,10 @@ exclude = [
 ]
 
 
+[tool.hatch.envs.default.scripts]
+euc = "ewi-usb-config {args}"
+
+
 [tool.hatch.envs.dev]
 dependencies = [
     "ruff",
