docs: add 'docs' folder
Don't include it in sdist

Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,8 @@ packages = ["ewi_usb_config"]
 
 [tool.hatch.build.targets.sdist]
 exclude = [
-    ".github",
+    "/.github",
+    "/docs",
 ]
 
 
