--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
+    tags:
+      - v*
+    workflow_dispatch:
 
 jobs:
   build_dist:
